<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/white"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RadioGroup
        android:id="@+id/map_types"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="0.3"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/satellite_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat_map_type" />

        <RadioButton
            android:id="@+id/normal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/normal_map_type" />
    </RadioGroup>

    <fragment
        android:id="@+id/map"
        android:layout_weight="3.2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:id="@+id/info_panel"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="0dp">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/speedLabel"
                android:layout_width="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/speedText"
                android:layout_width="wrap_content"
                android:text="@string/account_id"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/speedLabel"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/totalDistanceLabel"
                android:layout_width="wrap_content"
                android:text="@string/total_distance"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/totalDistanceText"
                android:layout_width="wrap_content"
                android:text="loading..."
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalDistanceLabel" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/timestampLabel"
                android:layout_width="wrap_content"
                android:text="Time"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/timestampText"
                android:layout_width="wrap_content"
                android:text="loading..."
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/timestampLabel"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>