<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:weightSum="5" >

    <RadioGroup
        android:id="@+id/map_types"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/satellite_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat_map_type" />

        <RadioButton
            android:id="@+id/normal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/normal_map_type" />
    </RadioGroup>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.80"
        class="com.google.android.gms.maps.MapFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date_from_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From Date"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timefrom_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timefrom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time_from"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/timefrom_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From Time"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            />

        <LinearLayout
            android:id="@+id/date_to_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/date_to_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date_to"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date_to_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To Date"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeto_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timeto_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time_to"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/timeto_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To Time"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:layout_weight="0.4"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/action_buttons"
            android:layout_alignParentLeft="true"
            android:background="@drawable/circle_shape"
            android:layout_width="30dp"
            android:layout_height="30dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/play_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="{fa-play}"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:padding="2dp"
                android:textColor="@color/white" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/pause_button"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="{fa-pause}"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:padding="2dp"
                android:textColor="@color/white" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/plot_path"
            android:layout_toRightOf="@+id/action_buttons"
            android:background="@drawable/circle_shape"
            android:layout_marginLeft="8dp"
            android:layout_width="30dp"
            android:layout_height="30dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="{fa-map-pin}"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:padding="2dp"
                android:textColor="@color/white" />

        </RelativeLayout>



        <SeekBar
            android:id="@+id/speed"
            android:layout_toRightOf="@+id/plot_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:max="15"
            android:progress="0" />


    </RelativeLayout>

</LinearLayout>