<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fst.apps.ftelematics.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <RelativeLayout
                android:id="@+id/logo"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_shape"
                android:layout_marginBottom="15dp"
                android:layout_width="72dp"
                android:layout_height="72dp">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="{fa-map-marker}"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:padding="2dp"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <TextView android:id="@+id/welcome_text"
                android:layout_below="@+id/logo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textColor="@color/parrot"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textSize="24dip"/>

            <!--<ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/circle_shape"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />-->

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:hint="@string/account_id"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/account_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="Login"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
